--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "A wrapper to work with the Spotify Web API.",
   "main": "src/index.js",
   "scripts": {
+    "clear": "rimraf lib",
+    "build": "npm run clear && ./node_modules/.bin/babel --out-dir lib src",
+    "build:watch": "npm run build -- --watch",
+    "build:umd": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.js",
+    "build:umd:min": "./node_modules/.bin/webpack --output-filename spotify-wrapper.umd.min.js -p",
+    "build:all": "npm run build && npm run build:umd && npm run build:umd:min",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
@@ -35,6 +41,9 @@
   },
   "homepage": "https://github.com/willianjusten/spotify-wrapper#readme",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.3.2",
     "babel-register": "^6.24.0",
     "chai": "^3.5.0",
@@ -47,8 +56,14 @@
     "mocha": "^5.2.0",
     "node-fetch": "^1.6.3",
     "nyc": "^13.1.0",
+    "rimraf": "^2.6.2",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
-    "sinon-stub-promise": "^4.0.0"
+    "sinon-stub-promise": "^4.0.0",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2"
+  },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0"
   }
 }
