--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "spotify-wrapper",
+  "name": "spotify-wrapper-rl",
   "version": "1.0.0",
   "description": "A wrapper to work with the Spotify Web API.",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "clear": "rimraf lib",
     "build": "npm run clear && ./node_modules/.bin/babel --out-dir lib src",
@@ -17,6 +17,10 @@
     "test:coverage": "nyc npm test",
     "coveralls": "npm run test:coverage && nyc report --reporter=text-lcov | coveralls"
   },
+  "files": [
+    "dist",
+    "lib"
+  ],
   "nyc": {
     "reporter": [
       "text",
@@ -48,21 +52,21 @@
     "babel-preset-env": "^1.3.2",
     "babel-register": "^6.24.0",
     "chai": "^3.5.0",
-    "coveralls": "^3.0.2",
+    "coveralls": "^2.13.0",
     "eslint": "^3.7.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
     "husky": "^0.11.9",
-    "mocha": "^5.2.0",
+    "mocha": "^3.2.0",
     "node-fetch": "^1.6.3",
-    "nyc": "^13.1.0",
-    "rimraf": "^2.6.2",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.9.0",
+    "nyc": "^10.2.0",
+    "rimraf": "^2.6.1",
+    "sinon": "^6.1.3",
+    "sinon-chai": "^3.2.0",
     "sinon-stub-promise": "^4.0.0",
-    "webpack": "^4.23.1",
+    "webpack": "^2.4.1",
     "webpack-cli": "^3.1.2"
   },
   "resolutions": {
